<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Card Games</string>
    <string name="actionSettings">Settings</string>

    <string name="mainLaunchLoginActivityButton">Login</string>
    <string name="mainCurrentUserButton">Current User</string>
    <string name="mainLogoutButton">Logout</string>
    <string name="mainLaunchRegisterActivityButton">Register</string>
    <string name="mainLaunchFriendsListActivityButton">Friends List</string>
    <string name="mainLaunchGamesListActivityButton">Games List</string>
    <string name="mainLaunchFirebaseActivityButton">Firebase</string>
    <string name="mainLaunchAndEngineActivityButton">AndEngine Game</string>
    <string name="mainLaunchCards46x64ActivityButton">Cards 46x64</string>
    <string name="mainLaunchCards92x128ActivityButton">Cards 92x128</string>
    <string name="mainLaunchCards184x256ActivityButton">Cards 184x256</string>
    <string name="mainLaunchCardsFullSizeActivityButton">Cards Full-Size</string>

    <string name="titleActivityLogin">LoginActivity</string>
    <string name="loginTitle">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginRememberCredentials">Remember</string>
    <string name="loginSubmitButton">Submit</string>

    <string name="titleActivityRegister">RegisterActivity</string>
    <string name="registerTitle">Register</string>
    <string name="registerFirstname">Firstname</string>
    <string name="registerLastname">Lastname</string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="registerPasswordConfirm">Password Confirm</string>
    <string name="registerSubmitButton">Submit</string>

    <string name="titleActivityFriendsList">FriendsListActivity</string>
    <string name="friendsListTitle">Friends</string>

    <string name="titleActivityGamesList">GamesListActivity</string>
    <string name="gamesListTitle">Games</string>

    <string name="titleActivityGame">GameActivity</string>

    <string name="deckOptionsHeader">Deck Options</string>
    <string name="deckOptionsDealButton">Deal</string>
    <string name="deckOptionsDrawButton">Draw</string>
    <string name="dealHeader">How many cards will you deal to each person?</string>

    <string name="gameMenuHeader">Game Menu</string><string name="gameMenuEndTurn">End Turn</string>

</resources>