<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/deckOptionsHeader"
            android:id="@+id/deckOptionsHeader"
            android:layout_gravity="center"
            android:layout_margin="@dimen/deckOptionsHeaderPadding"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/deckOptionsDealButton"
            android:id="@+id/deckOptionsDealButton"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/deckOptionsDrawButton"
            android:id="@+id/deckOptionsDrawButton"/>

</LinearLayout>